fix: fix text align in modal add success

--- a/frontend/src/pages/addAnnouncement/libr/addAnnouncement.module.scss
+++ b/frontend/src/pages/addAnnouncement/libr/addAnnouncement.module.scss
@@ -42,6 +42,7 @@
         align-items: center;
         gap: 1rem;
         p {
+            text-align: center;
             font-size: 28px;
             color: var(--main-blue);
         }
